sumo/tests/traci/ChangeRoute/InvalidNodeId/vehroutes.traci
<?xml version="1.0"?>

<!-- generated on 04/26/10 10:02:14 by SUMO sumo Version dev-SVN-r8163
<configuration>

    <input>
        <net-file value="three_split.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <vehroute-output value="vehroutes.xml"/>
    </output>

    <report>
        <no-step-log value="true"/>
    </report>

    <traci_server>
        <remote-port value="8813"/>
        <penetration value="1"/>
    </traci_server>

</configuration>
-->

<routes>
    <vehicle id="0" depart="0.00" arrival="80.00">
        <route edges="beg middle end rend"/>
    </vehicle>

</routes>
